# canreader

./: .gitignore  BUILD.md  BUILD_WINDOWS.md  CMakeLists.txt  CROSS_COMPILE_WINDOWS.md  PROJECT_STRUCTURE.md  QUICK_WINDOWS_BUILD.md  auto_build_windows.sh  build.sh  build_windows.bat  build_windows.ps1  build_windows.sh  build_windows_cross.sh  build_windows_simple.sh  check_qt6_build.sh  copy_dlls_windows.bat  install_dependencies.sh  install_mingw.sh
.github/workflows/: build-windows.yml
docs/: README.md  USB_DIRECT_CONNECTION.md
include/: caninterface.h  diagnosticprotocol.h  mainwindow.h  obd2protocol.h  udsprotocol.h  usbdevice.h
src/: caninterface.cpp  diagnosticprotocol.cpp  mainwindow.cpp  obd2protocol.cpp  udsprotocol.cpp  usbdevice.cpp
